Improve mobile layout and keep main container consisten height to prevent layout shift

--- a/src/main.css
+++ b/src/main.css
@@ -31,19 +31,84 @@ body {
   align-content: center;
 }
 
+.github-corner {
+  z-index: 10;
+}
+
+@media screen and (max-height: 650px) {
+  .github-corner {
+    display: none;
+  }
+}
+
 .main {
+  --scroll-gradient: hsla(0, 0%, 100%, 0) 0%, hsla(0, 0%, 100%, 0.01) 8.1%, hsla(0, 0%, 100%, 0.039) 15.5%,
+    hsla(0, 0%, 100%, 0.083) 22.5%, hsla(0, 0%, 100%, 0.14) 29%, hsla(0, 0%, 100%, 0.207) 35.3%,
+    hsla(0, 0%, 100%, 0.282) 41.2%, hsla(0, 0%, 100%, 0.36) 47.1%, hsla(0, 0%, 100%, 0.44) 52.9%,
+    hsla(0, 0%, 100%, 0.518) 58.8%, hsla(0, 0%, 100%, 0.593) 64.7%, hsla(0, 0%, 100%, 0.66) 71%,
+    hsla(0, 0%, 100%, 0.717) 77.5%, hsla(0, 0%, 100%, 0.761) 84.5%, hsla(0, 0%, 100%, 0.79) 91.9%,
+    hsla(0, 0%, 100%, 0.8) 100%;
+
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: min(100vh - 2rem, 500px);
   width: min(100% - 2rem, 500px);
   margin-left: auto;
   margin-right: auto;
   background: #fff;
-  padding: 2rem;
   border-radius: 1rem;
   box-shadow: var(--shadow);
+  overflow: hidden;
+
+  /* Safari fix for hiding scroll gradient overflow */
+  transform: translate3d(0, 0, 0);
+}
+
+.main::before,
+.main::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  height: 1.5rem;
+  width: 100%;
+  z-index: 1;
+}
+
+.main::before {
+  top: 0;
+  background: linear-gradient(to top, var(--scroll-gradient));
+}
+
+.main::after {
+  bottom: 0;
+  background: linear-gradient(to bottom, var(--scroll-gradient));
+}
+
+.scrollable {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: 2rem;
+  gap: 1.5rem;
+}
+
+.main .body {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.main footer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .title {
-  margin-top: 0;
-  margin-bottom: 1rem;
+  margin: 0;
   font-size: 2rem;
 }
 
@@ -121,10 +186,6 @@ body {
 
 .main .react-colorful {
   width: auto;
-}
-
-.main footer {
-  display: grid;
-  margin-top: 1.5rem;
-  gap: 0.5rem;
+  flex-grow: 1;
+  flex-shrink: 0;
 }
